fixing song content height overlaping with nav buttons

--- a/frontend/src/app/components/partials/song-content/song-content.component.css
+++ b/frontend/src/app/components/partials/song-content/song-content.component.css
@@ -126,7 +126,6 @@
 
   .parts-ul {
     overflow: hidden;
-    height: calc(100vh - 420px);
     scrollbar-width: 0;
     list-style-type: none;
   }
